--- a/public/index.html
+++ b/public/index.html
@@ -512,9 +512,15 @@
         </a>
 
     </div>
-
-
-#{footerMobile /}
+    <div data-role="footer" data-id="foo1" data-position="fixed">
+    	<div data-role="navbar"  data-iconpos="top">
+    		<ul>
+    			<li ><a data-icon="grid" href="#"  class="">Oppskrift</a></li>
+    			<li><a data-icon="plus" href="#" class="">Meny</a></li>
+                <li><a data-icon="check" href="#" class="ui-btn-active ui-state-persist">Handle</a></li>
+    		</ul>
+    	</div><!-- /navbar -->
+    </div><!-- /footer -->
 </div>
 
 
