fungerende menu, introdusert Jasmine og Moment js.

--- a/public/SpecRunner.html
+++ b/public/SpecRunner.html
@@ -3,7 +3,7 @@
 <head>
   <title>Jasmine Spec Runner</title>
   <link rel="stylesheet" type="text/css" href="css/libs/jasmine.css">
-  <script src="js/libs/require.js" data-main="js/test/config/TestInit"></script>
+  <script src="js/libs/require.2.1.4.dev.js" data-main="js/test/config/TestInit"></script>
 </head>
 <body>
 </body>
